2010-10-31  Larry Campbell <lcampbel@akamai.com>

	* Tools/make_strings/make_strings.m: Permits tool to take nil as the
	table name argument in NSLocalizedStringFromTable and
	NSLocalizedStringFromTableInBundle (as does the corresponding OSX
	utility, genstrings).

2010-10-30  German Arias <german@xelalug.org>

	* Documentation/GNUmakefile: Changes in some files names to 
	correspond with the files provided in the Documentation directory.

2010-10-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Additions/GNUstepBase/GSMime.h
	* Source/Additions/GSMime.m: Add support for delivery receipts.
	* Source/NSURLConnection.m: Fix simple leak in
	([+sendSynchronousRequest:returningResponse:error:])

2010-10-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFFIInvocation.m: Revert David's last change ,which caused
	crashes by dereferencing a null pointer, even though I had put a
	comment in the code warning that the pointer could be null!

2010-10-27  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Fix definition of HAVE_ICU
	* configure:
	* Headers/Additions/GNUstepBase/config.h.in: regenerate
	* Headers/Additions/GNUstepBase/GSMime.h
	* Source/Additions/GSMime.m: wrap long lines
	* Source/NSLocale.m: Use HAVE_ICU

2010-10-26 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSLocale.m: Fix -displayNameForKey:value: to interact properly
	with libicu for some common cases.

2010-10-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/ObjectiveC2/GNUmakefile:
	Do not set -march=i686 when on an x86 system as it breaks compilation
	for other cpu types.

2010-10-19  Jonathan Gillaspie  <jonathan.gillaspie@testplant.com>

	* Source/Additions/NSError+GNUstepBase.m: Prevent SegFault when 
	FormatMessageW doesn't return a string on Windows.
	
2010-10-19  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSURL.m (-absoluteURL): Fix test for an absolute URL,
	which got things backward.

2010-10-19  Richard Frith-Macdonald <rfm@gnu.org>
